testsuite/tests/linear/should_fail/LinearKind2.stderr

LinearKind2.hs:7:1: error: [GHC-13218]
    • Illegal linear function in a kind: * %1 -> *
    • In the data type declaration for ‘Two’
